--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+/* 글꼴 설정 */
+@font-face {
+  font-family: "chab";
+  src: url("/public/chab.ttf");
+}
+@font-face {
+  font-family: "ddag";
+  src: url("/public/ddag.ttf");
+}
+
 :root {
   --primary-color: #000000;
   --secondary-color: #0000ff;
@@ -23,6 +33,7 @@ html {
 body {
   font-size: var(--font-size-base);
   color: var(--primary-color);
+  font-family: "ddag";
 }
 /* 웹서비스 개발시 권장함.(개인적으로) */
 html,
